--- a/web.config
+++ b/web.config
@@ -4,9 +4,12 @@
     <!-- indicates that the app.js file is a node.js application 
     to be handled by the iisnode module -->
 
+	<iisnode
+	 loggingEnabled="true" logDirectoryNameSuffix="logs" 
+	/>
+	
     <handlers>
-      <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
-      <add name="iisnode2" path="hello.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
     </handlers>
 
     <!-- use URL rewriting to redirect the entire branch of the URL namespace
