--- a/web.config
+++ b/web.config
@@ -1,15 +1,11 @@
 <configuration>
   <system.webServer>
 
-    <!-- indicates that the app.js file is a node.js application 
-    to be handled by the iisnode module -->
-
-	<iisnode
-	 loggingEnabled="true" logDirectoryNameSuffix="logs" 
-	/>
+  	<iisnode loggingEnabled="true" logDirectoryNameSuffix="logs" />
 	
+    <!-- indicates that the backend.js file is a node.js application to be handled by the iisnode module -->
     <handlers>
-      <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="backend.js" verb="*" modules="iisnode"/>
     </handlers>
 
     <!-- use URL rewriting to redirect the entire branch of the URL namespace
@@ -25,7 +21,7 @@
       <rules>
         <rule name="ekmHoliCal">
           <match url="/*" />
-          <action type="Rewrite" url="app.js" />
+          <action type="Rewrite" url="backend.js" />
         </rule>
       </rules>
     </rewrite>
