Changed shape of data coming back from api/departments and renamed backend back to server again!

--- a/web.config
+++ b/web.config
@@ -3,9 +3,9 @@
 
   	<iisnode loggingEnabled="true" logDirectoryNameSuffix="logs" />
 	
-    <!-- indicates that the backend.js file is a node.js application to be handled by the iisnode module -->
+    <!-- indicates that the server.js file is a node.js application to be handled by the iisnode module -->
     <handlers>
-      <add name="iisnode" path="backend.js" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
     </handlers>
 
     <!-- use URL rewriting to redirect the entire branch of the URL namespace
@@ -21,7 +21,7 @@
       <rules>
         <rule name="ekmHoliCal">
           <match url="/*" />
-          <action type="Rewrite" url="backend.js" />
+          <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
     </rewrite>
